add markup to html and style to css

--- a/index.html
+++ b/index.html
@@ -1,35 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset ="UTF-8">
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+
+<head>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     name="viewport" />
-    <link href="reset.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" />
-    <title>BBOY-UI</title> 
-  </head>
-  <body>
-    <header>
-      <container>
-        <div class="row">
-          <div class="col-lg-4 ">
-            <ul class="menu">
-              <li>456<br> following</li>
-              <li>125<br> online</li>
-              <li>2<br> chat</li>
-            </ul>
-          </div>
-          <div class="col-lg-8">
-            <div class="row">
-             <div class="image">
-                <img src="..." alt="..." class="img-thumbnail">
-             </div>
+  <link href="reset.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="style.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/bf95d68101.js"></script>
+  <title>BBOY-UI</title>
+</head>
+
+<body>
+  <header class="container-fluid ">
+    <div class="row">
+      <div class="col-lg-3 header-section ">
+        <ul class="menu">
+          <li>456<br> following</li>
+          <li>125<br> online</li>
+          <li>2<br> chat</li>
+        </ul>
+      </div>
+      <div class="col-lg-9  image-section">
+        <ul class="icons pt-2">
+          <li>
+            <img src="https://pixabay.com/vectors/man-avator-person-admin-161282/" alt="avatar-man"
+              class="img-thumbnail">
+          </li>
+          <li class="ml-auto user-name"> LOCO SKILLS</li>
+          <li class="ml-auto"><i class="fas fa-plus"></i></li>
+          <li><i class="fas fa-cog"></i></li>
+          <li><i class="fas fa-sign-in-alt "></i></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section>
+    <div class="row">
+      <div class="col-lg-3 sections mt-1">
+        <div class="row ">
+          <div class="col-lg-10">
+            <div class="media">
+              <div class="media-body p-2">
+                <h6>Comment</h6>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio.
+              </div>
             </div>
           </div>
-
+          <div class="col-lg-2 p-2 d-inline-flex d-flex align-items-center">
+            <i class="fas fa-plus add-button mr-1"></i>
+            <i class="fas fa-minus ml-1 minus-button"></i>
+          </div>
         </div>
-      </container>
-    </header>
-  </body>
+      </div>
+      <article class="col-lg-9">
+        <div class="row d-flex justify-content-around">
+          <div class="col-lg-4">
+            <h5>Upcoming</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h5>Current</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h5>Achievements</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+  <section>
+    <div class="row">
+      <div class="col-lg-3 sections mt-1">
+        <div class="row d-flex justify-content-around ">
+          <div class="col-lg-10 ">
+            <div class="media">
+              <div class="media-body p-2">
+                <h6> Others Comment</h6>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio.
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 p-2 d-inline-flex d-flex align-items-center ">
+            <i class="fas fa-thumbs-up mr-1"></i>
+            <i class="fas fa-thumbs-down ml-1 pt-1"></i>
+          </div>
+        </div>
+      </div>
+      <article class="col-lg-9">
+        <div class="row ">
+          <div class="col-lg-4">
+            <h5>Upcoming</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4 ">
+            <h5>Current</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h5>Achievements</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+  <section>
+    <div class="row">
+      <div class="col-lg-3 sections mt-1">
+        <div class="row d-flex justify-content-around ">
+          <div class="col-lg-10 ">
+            <div class="media">
+              <div class="media-body p-2">
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio.
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 p-2 d-inline-flex d-flex align-items-center ">
+              <i class="fas fa-thumbs-up mr-1"></i>
+            <i class="fas fa-thumbs-down ml-1 pt-1"></i>
+          </div>
+        </div>
+      </div>
+      <article class="col-lg-9">
+        <div class="row ">
+          <div class="col-lg-4">
+            <h5>Upcoming</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4 ">
+            <h5>Current</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h5>Achievements</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+  <section>
+    <div class="row">
+      <div class="col-lg-3 sections mt-1">
+        <div class="row d-flex justify-content-around ">
+          <div class="col-lg-10 ">
+            <div class="media">
+              <div class="media-body p-2">
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio.
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 p-2 d-inline-flex d-flex align-items-center ">
+              <i class="fas fa-thumbs-up mr-1"></i>
+            <i class="fas fa-thumbs-down ml-1 pt-1"></i>
+          </div>
+        </div>
+      </div>
+      <article class="col-lg-9">
+        <div class="row ">
+          <div class="col-lg-4">
+            <h5>Upcoming</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4 ">
+            <h5>Current</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h5>Achievements</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+  <section>
+    <div class="row">
+      <div class="col-lg-3 sections mt-1">
+        <div class="row d-flex justify-content-around ">
+          <div class="col-lg-10 ">
+            <div class="media">
+              <div class="media-body p-2">
+                
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio.
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 p-2 d-inline-flex d-flex align-items-center ">
+            <i class="fas fa-thumbs-up mr-1"></i>
+            <i class="fas fa-thumbs-down ml-1 pt-1"></i>
+          </div>
+        </div>
+      </div>
+      <article class="col-lg-9">
+        <div class="row ">
+          <div class="col-lg-4">
+            <h5>Upcoming</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4 ">
+            <h5>Current</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h5>Achievements</h5>
+            <div>
+              <img src="..." alt="...">
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+
+
+
+  <main>
+
+  </main>
+</body>
+
 </html>
